<resources>
    <string name="app_name">Mobile Development</string>
    <string name="inputFirstName">Enter your First Name</string>
    <string name="inputLastName">Enter your Last Name</string>
    <string name="inputEmail">Enter correct email</string>
    <string name="inputPhone">Enter correct number</string>
    <string name="inputPassword">Enter Password</string>
    <string name="inputConfirmation">Password do not match</string>
    <string name="inputfn">Input your first name</string>
    <string name="inputln">Input your last name</string>
    <string name="inputpn">Input your phone number</string>
    <string name="inputem">Input your email</string>
    <string name="buttomSubmit">Submit</string>
    <string name="buttomShowList">Show list</string>








</resources>
